2008-05-05  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #531426

	* em-format-html.c (efh_format_headers):
	Display face header images at 48x48 instead of 64x64.
	Patch from Roland Clobus.

2008-05-04  Matthew Barnes  <mbarnes@redhat.com>

	* mail-component.c (mail_component_show_logger):
	Fix up the Debug Logs window a bit:
	- Add a Close button.
	- Fix some spacing issues (HIG compliance).
	- Just show the log level icon.  Add a tooltip for the icon showing
	  a description of the log level (Error/Warning/Debug).  Also, avoid
	  using e-icon-factory.  Set the GtkCellRendererPixbuf's "stock-id"
	  and "stock-size" properties instead.
	- Use GConfBridge to track the user's log level preference.

2008-04-30  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #528288

	* em-folder-browser.c: (emfb_init), (em_folder_browser_show_wide):
	Ensure minimum size for preview and message list.
	* em-folder-browser.c: (get_view_query):
	Distinguish between no filter and custom filter.
	* message-list.c: (regen_list_done):
	Set info message to tree when no message shown in a list.

2008-04-30  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #530245

	* searchtypes.xml: Let searches work with labels again.

2008-04-30  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #467892

	* em-folder-view.c: (em_folder_view_open_selected):
	Do not inherit search filters when opening messages in new window.
	* message-list.c: (regen_list_exec):
	If we are called from folder_changed even, then keep the actually
	selected message so it will not disappear when user reads it and
	it doesn't belong to actual filter anymore.

2008-04-30  Shuai Liu  <shuai.liu@sun.com>

	** Fix for bug #530672
	Evolution crashes when viewing pgp-signed message

	* em-format-html-display.c: Modify the array of smime_sign_colour 
	from 4 to 5 to ensure the input by data-server is right

2008-04-29  Milan Crha  <mcrha@redhat.com>

	* em-utils.c: (em_utils_snoop_type):
	Fixes compiler warning (unused variable).
